Fixed input style for Fundraising on mobile devices

--- a/src/components/main/Fundraisings/Fundraising.css
+++ b/src/components/main/Fundraisings/Fundraising.css
@@ -20,11 +20,12 @@ input {
   font-size: medium;
   border-radius: 10px;
   width: 100%;
-  max-width: 250px;
+  max-width: 20%;
   padding: 8px 12px;
   border: 1px solid #ccc;
   outline: none;
   transition: border-color 0.3s, box-shadow 0.3s;
+  box-sizing: border-box; /* Учитываем padding и border */
 }
 
 input:focus {
